examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_isempty.st
language core;

extend with #lists;
extend with #type-ascriptions;

fn main(n : Nat) -> Nat {
    return List::isempty([0] as [Nat])
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
